--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.3 2. okt pause hentede uds + fav + webplayer">
+          android:versionName="3.1.3 6.okt udsendelser A - Å">
 
   <uses-sdk
       android:minSdkVersion="7"
