--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.3 16.okt Favorit">
+          android:versionName="3.1.3 17.okt udvidet afspiller">
 
   <uses-sdk
       android:minSdkVersion="7"
@@ -32,7 +32,7 @@
       android:name="dk.dr.radio.diverse.App"
       android:icon="@drawable/ic_launcher_beta"
       android:logo="@drawable/dr_logo"
-      android:label="@string/app_name"
+      android:label="DR Radio beta"
       android:theme="@style/Theme.Dr"
       >
 
@@ -54,9 +54,8 @@
                         -->
     <activity
         android:launchMode="singleTop"
-        android:name="dk.dr.radio.akt.Hovedaktivitet"
-        android:label="@string/app_name">
-      <intent-filter>
+        android:name="dk.dr.radio.akt.Hovedaktivitet">
+    <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
