--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,9 +3,9 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.3 21.okt lydstatus+fix">
+          android:versionName="3.1.3 24.okt forr/næste">
 
-  <uses-sdk
+<uses-sdk
       android:minSdkVersion="7"
       android:targetSdkVersion="19"/>
 
