--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.3 24.okt forr/næste">
+          android:versionName="3.1.4 27.okt exopl1">
 
 <uses-sdk
       android:minSdkVersion="7"
@@ -185,15 +185,16 @@
 
 
     <!-- Eksperiment - bruge ExoPlayer i stedet for indbygget MediaPlayer
-    <activity android:name="com.google.android.exoplayer.demo.full.FullPlayerActivity"
+-->
+    <activity android:name="dk.dr.exoplayer.DRFullPlayerActivity"
               android:configChanges="keyboardHidden|orientation|screenSize"
-              android:label="@string/application_name">
+              android:label="@string/application_name"
+              android:theme="@style/PlayerTheme">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
--->
 
   </application>
 
