--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.5 29.okt exo 2">
+          android:versionName="3.1.5 31.okt design">
 
 <uses-sdk
       android:minSdkVersion="7"
