--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.5 5.nov wakelock6">
+          android:versionName="3.1.6 5.nov nat">
 
 <uses-sdk
       android:minSdkVersion="7"
