--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.9 19.nov mere design">
+          android:versionName="3.1.9 20.nov mere design4">
 
 <uses-sdk
       android:minSdkVersion="7"
