Implementering af Gemius sidevisningsstatistik

--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -194,6 +194,10 @@
               android:theme="@style/PlayerTheme">
     </activity>
 
+
+    <!-- Gemius-plugin til at måle sidevisninger etc -->
+    <service android:name="com.gemius.sdk.MobilePlugin"/>
+
   </application>
 
 </manifest>
