--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.10 28.nov statistik 120">
+          android:versionName="3.1.10 28.nov lydstyrke 121">
 
 <uses-sdk
       android:minSdkVersion="7"
