--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,8 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.1.10 2 dec nyt ikonsæt2 123">
+android:versionName="3.1.10 4 dec prio1+2 124"
+    >
 
 <uses-sdk
       android:minSdkVersion="7"
