--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-android:versionName="3.1.10 4 dec prio1+2 124"
+android:versionName="3.1.10 4 dec design prio3-6  127"
     >
 
 <uses-sdk
