--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-android:versionName="3.1.10 4 dec appcompat v21 128"
+android:versionName="3.1.10 7 dec 129"
     >
 
 <uses-sdk
