--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-android:versionName="3.2 11.dec design-ripples, offline-alarm 135"
+android:versionName="3.2 11.dec offline-alarm3 138"
     >
 
   <uses-sdk
