--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-android:versionName="3.2 14.dec design 140"
+android:versionName="3.2 15.dec upålideligt servertidsformat 141"
     >
 
   <uses-sdk
