--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-android:versionName="3.2 21.dec småting 143"
+android:versionName="3.5.05 27 jan hentCrashh"
     >
 
   <uses-sdk
