--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
-          android:versionName="3.5.1 24 feb Fix: Senest spillet opdateres"
+          android:versionName="3.5.1 6 mar fix: kanHøres kanHentes"
     >
 
   <uses-sdk
