--- a/DRRadiov3/AndroidManifest.xml
+++ b/DRRadiov3/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="dk.dr.radio.v3"
+          xmlns:tools="http://schemas.android.com/tools" package="dk.dr.radio.v3"
           android:installLocation="auto"
           android:versionCode="1"
           android:versionName="3.5.1 20 mar vis om kanHøres"
@@ -65,7 +65,7 @@
     <activity
         android:name="dk.dr.radio.akt.Indstillinger_akt"
         android:theme="@style/Theme.Indstillinger"
-        android:label="D R Radio Indstillinger">
+        android:label="D R Radio Indstillinger" tools:ignore="ExportedPreferenceActivity">
       <!-- Gør aktivitet synlig i forbindelse med at brugeren gennemser sit dataforbrug -->
       <intent-filter>
         <action android:name="android.intent.action.MANAGE_NETWORK_USAGE"/>
